--- a/index.html
+++ b/index.html
@@ -346,6 +346,15 @@
             font-size: 1.5em;
             color: #333; /* Dark text color */
         }
+        <!-- Markdown Parser -->
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
+<!-- KaTeX for math rendering -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.js"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/contrib/auto-render.min.js"
+        onload="renderMathInElement(document.body);"></script>
+
     </style>
 </head>
 <body>
@@ -470,7 +479,26 @@ const aiResponse = data.text || "Sorry, I couldn't process that.";
                 robotEmoji.textContent = '🤖';
 
                 responseElement.appendChild(robotEmoji);
-                responseElement.appendChild(document.createTextNode(aiResponse));
+                // Parse Markdown to HTML
+const markdownHtml = marked.parse(aiResponse);
+
+// Create a container and insert parsed HTML
+const markdownContainer = document.createElement('div');
+markdownContainer.innerHTML = markdownHtml;
+
+// Append robot icon and parsed content
+responseElement.appendChild(robotEmoji);
+responseElement.appendChild(markdownContainer);
+
+// Render math expressions
+renderMathInElement(markdownContainer, {
+    delimiters: [
+        {left: "$$", right: "$$", display: true},
+        {left: "$", right: "$", display: false}
+    ],
+    throwOnError: false
+});
+
                 chatBox.appendChild(responseElement);
                 chatBox.scrollTop = chatBox.scrollHeight;
             } catch (error) {
