--- a/signup.html
+++ b/signup.html
@@ -313,8 +313,8 @@
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required aria-required="true">
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required aria-required="true">
+                <label for="PIN">PIN:</label>
+                <input type="PIN" id="PIN" name="PIN" required aria-required="true">
 
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required aria-required="true">
