--- a/about.html
+++ b/about.html
@@ -217,11 +217,11 @@
         <h1 class="navbar-title">SūdžiusAI</h1>
         <div class="menu-container">
             <div class="dropdown" role="menu">
-                <span class="menu-text menu-button" role="button" aria-haspopup="true" aria-expanded="false">Menu</span>
+                <span class="menu-text menu-button" role="button" aria-haspopup="true" aria-expanded="false">Meniu</span>
                 <div class="dropdown-content" role="menuitem" aria-hidden="true">
-                    <a href="index.html" id="home-link" aria-current="page">Home</a>
-                    <a href="about.html" aria-label="About page">About</a>
-                    <a href="Login.html" aria-label="Log In page">Log In</a>
+                    <a href="index.html" id="home-link" aria-current="page">Pagrindinis</a>
+                    <a href="about.html" aria-label="About page">Apie</a>
+                    <a href="Login.html" aria-label="Log In page">Prisijungti</a>
                 </div>
             </div>
         </div>
