--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         
         async function checkApiStatus() {
             try {
-                const response = await fetch("https://152a1aea-42ed-4a2a-91aa-1baf5004ffee-00-cd6guwqubgyw.riker.replit.dev/api/status");
+                const response = await fetch("https://canary-concrete-ridge.glitch.me/api/status");
                 const data = await response.json();
                 if (data.status === "ok") {
                     console.log("API veikia");
