--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ document.addEventListener("DOMContentLoaded", function() {
             const loadingMsgElement = showLoadingMessage();
 
             // Backend URL
-            const backendUrl = 'https://geminibackend-357741312903.us-central1.run.app';
+            const backendUrl = 'https://geminisudzius-357741312903.europe-central2.run.app';
             
             // Log the request to console for debugging
             console.log("Sending request to:", backendUrl);
