--- a/Login.html
+++ b/Login.html
@@ -332,7 +332,7 @@
                 <button type="submit">Prisijunk</button> <!-- Log In button -->
             </form>
             <div class="register-here">
-                <p>Arba <a href="signup.html">registruok</a></p>
+                <a href="/signup.html">registruok</a>
             </div>
         </div>
 
