--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <div class="dropdown-content" aria-hidden="true">
                     <ul>
                         <li><a href="index.html" id="home-link" aria-current="page">Pagrindinis</a></li>
-                        <li><a href="about.html" aria-label="About page">Apie</a></li>
+                        <li><a href="settings.html" aria-label="Settings page">BUS</a></li>
                         <li><a href="Login.html" aria-label="Log In page">Prisijungti</a></li>
                     </ul>
                 </div>
