--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
       </div>
       <div class="text-2xl font-bold mb-1">Welcome Back</div>
       <div class="text-gray-500 mb-4">Sign in to your learning account</div>
-      <form class="space-y-4">
+      <form id="login-form" class="space-y-4">
         <div class="space-y-2 text-left">
           <label for="email" class="block font-medium">Email</label>
           <input id="email" name="email" type="email" placeholder="Enter your email" class="w-full border rounded px-3 py-2" required>
@@ -24,11 +24,35 @@
           <input id="password" name="password" type="password" placeholder="Enter your password" class="w-full border rounded px-3 py-2" required>
         </div>
         <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded font-semibold">Sign In</button>
+        <div id="login-error" class="text-red-600 text-sm mt-2 hidden"></div>
       </form>
       <div class="mt-4 text-center text-sm">
         Don't have an account? <a href="signup.html" class="text-blue-600 hover:underline">Sign up</a>
       </div>
     </div>
   </div>
+  <script>
+document.getElementById('login-form').addEventListener('submit', async function(e) {
+  e.preventDefault();
+  const email = document.getElementById('email').value;
+  const password = document.getElementById('password').value;
+  const errorDiv = document.getElementById('login-error');
+  errorDiv.classList.add('hidden');
+  errorDiv.textContent = '';
+  const res = await fetch('login.php', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ email, password })
+  });
+  const data = await res.json();
+  if (data.success) {
+    localStorage.setItem('auth_token', data.data.token);
+    window.location.href = 'dashboard.html';
+  } else {
+    errorDiv.textContent = data.message || 'Login failed.';
+    errorDiv.classList.remove('hidden');
+  }
+});
+</script>
 </body>
 </html>
