--- a/settings.html
+++ b/settings.html
@@ -12,9 +12,30 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between items-center h-16">
         <div class="flex items-center space-x-3">
-          <a href="dashboard.html" class="px-3 py-2 text-gray-700 hover:bg-gray-100 rounded flex items-center"><span class="mr-2">⬅️</span>Back to Dashboard</a>
-          <span class="h-8 w-8 text-blue-600">📖</span>
-          <h1 class="text-xl font-bold text-gray-900">SudžiusAI</h1>
+          <a href="index.html" class="flex items-center space-x-3">
+            <span class="h-8 w-8 text-blue-600">📖</span>
+            <h1 class="text-xl font-bold text-gray-900">SudžiusAI</h1>
+          </a>
+        </div>
+        <div class="flex items-center space-x-4">
+          <div class="relative inline-block w-48">
+            <select id="languageSelector" class="block appearance-none w-full bg-white border border-gray-300 hover:border-blue-500 px-4 py-2 pr-8 rounded leading-tight focus:outline-none focus:shadow-outline">
+              <option value="en">🇺🇸 English</option>
+              <option value="lt">🇱🇹 Lietuvių</option>
+              <option value="es">🇪🇸 Español</option>
+              <option value="fr">🇫🇷 Français</option>
+              <option value="de">🇩🇪 Deutsch</option>
+              <option value="ru">🇷🇺 Русский</option>
+            </select>
+            <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+              <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M7.293 14.707a1 1 0 001.414 0l5-5a1 1 0 00-1.414-1.414L10 11.586 8.707 10.293a1 1 0 00-1.414 1.414l2 2z"/></svg>
+            </div>
+          </div>
+          <a href="dashboard.html" class="px-3 py-2 text-gray-700 hover:bg-gray-100 rounded flex items-center"><span class="mr-2">🏠</span><span id="navDashboard">Dashboard</span></a>
+          <a href="leaderboard.html" class="px-3 py-2 text-gray-700 hover:bg-gray-100 rounded flex items-center" id="leaderboardLink"><span class="mr-2">🏆</span><span id="navLeaderboard">Leaderboard</span></a>
+          <a href="settings.html" class="px-3 py-2 text-gray-700 hover:bg-gray-100 rounded flex items-center"><span class="mr-2">⚙️</span><span id="navSettings">Settings</span></a>
+          <a href="profile.html" class="px-3 py-2 text-gray-700 hover:bg-gray-100 rounded flex items-center"><span class="mr-2">👤</span><span id="navProfile">Profile</span></a>
+          <a href="#" id="logoutBtn" class="px-3 py-2 text-gray-700 hover:bg-gray-100 rounded flex items-center"><span class="mr-2">🚪</span><span id="navLogout">Logout</span></a>
         </div>
       </div>
     </div>
@@ -25,37 +46,38 @@
       <div class="bg-white rounded-lg shadow p-6">
         <div class="flex items-center space-x-2 text-lg font-semibold mb-2"><span>👤</span><span>Profile Settings</span></div>
         <div class="text-gray-500 text-sm mb-4">Update your personal information and profile picture</div>
-        <form class="space-y-6">
+        <form id="profile-form" class="space-y-6" enctype="multipart/form-data">
           <div class="flex items-center space-x-6">
-            <div class="h-24 w-24 bg-gray-200 rounded-full flex items-center justify-center text-lg font-bold">ST</div>
+            <div id="profilePhotoPreview" class="h-24 w-24 bg-gray-200 rounded-full flex items-center justify-center text-lg font-bold">ST</div>
             <div>
-              <label for="profileImage" class="block font-medium mb-2">Profile Photo</label>
-              <input id="profileImage" type="file" accept="image/*" class="block" />
-              <p class="text-sm text-gray-500 mt-2">JPG, PNG up to 5MB</p>
+              <label for="profilePhoto" class="block font-medium mb-2">Profile Photo</label>
+              <input id="profilePhoto" name="profilePhoto" type="file" accept="image/gif,image/png,image/jpeg" class="block" disabled />
+              <p class="text-sm text-gray-500 mt-2">JPG, PNG, GIF up to 5MB</p>
             </div>
           </div>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
             <div class="space-y-2">
               <label for="username" class="block font-medium">Username</label>
-              <input id="username" name="username" class="w-full border rounded px-3 py-2" value="student123">
+              <input id="username" name="username" class="w-full border rounded px-3 py-2" required readonly>
             </div>
             <div class="space-y-2">
               <label for="email" class="block font-medium">Email</label>
-              <input id="email" name="email" type="email" class="w-full border rounded px-3 py-2" value="student@example.com">
+              <input id="email" name="email" type="email" class="w-full border rounded px-3 py-2" required readonly>
             </div>
           </div>
           <div class="space-y-2">
             <label for="bio" class="block font-medium">Bio</label>
-            <textarea id="bio" name="bio" class="w-full border rounded px-3 py-2" rows="3">Passionate learner focused on STEM subjects</textarea>
+            <textarea id="bio" name="bio" class="w-full border rounded px-3 py-2" rows="3" placeholder="Parašyk kažką..." readonly></textarea>
           </div>
           <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Save Profile</button>
+          <div id="profile-error" class="text-red-600 text-sm mt-2 hidden"></div>
         </form>
       </div>
       <!-- Tamo Credentials -->
       <div class="bg-white rounded-lg shadow p-6">
         <div class="flex items-center space-x-2 text-lg font-semibold mb-2"><span>🔑</span><span>Tamo Credentials</span></div>
         <div class="text-gray-500 text-sm mb-4">Connect your Tamo account to sync grades automatically</div>
-        <form class="space-y-4">
+        <form action="#tamo" class="space-y-4">
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
             <div class="space-y-2">
               <label for="tamoUsername" class="block font-medium">Tamo Username</label>
@@ -105,5 +127,219 @@
       </div>
     </div>
   </main>
+  <script>
+const translations = {
+  en: {
+    nav: {dashboard: "Dashboard", leaderboard: "Leaderboard", settings: "Settings", profile: "Profile", logout: "Logout"},
+    profileSettings: "Profile Settings",
+    profileSettingsDesc: "Update your personal information and profile picture",
+    tamo: "Tamo Credentials",
+    tamoDesc: "Connect your Tamo account to sync grades automatically",
+    notifications: "Notifications",
+    notificationsDesc: "Manage your notification preferences",
+    gradeUpdates: "Grade Updates",
+    gradeUpdatesDesc: "Get notified when your grades are updated",
+    aiRecs: "AI Recommendations",
+    aiRecsDesc: "Receive personalized learning suggestions",
+    weeklyReports: "Weekly Reports",
+    weeklyReportsDesc: "Get weekly progress summaries",
+    saveProfile: "Save Profile",
+    saveCredentials: "Save Credentials",
+    secure: "Secure Connection",
+    secureDesc: "Your credentials are encrypted and stored securely. We only use them to fetch your grades."
+  },
+  lt: {
+    nav: {dashboard: "Pradžia", leaderboard: "Lyderių lentelė", settings: "Nustatymai", profile: "Profilis", logout: "Atsijungti"},
+    profileSettings: "Profilio nustatymai",
+    profileSettingsDesc: "Atnaujinkite savo asmeninę informaciją ir profilio nuotrauką",
+    tamo: "Tamo prisijungimai",
+    tamoDesc: "Prijunkite Tamo paskyrą, kad pažymiai būtų sinchronizuojami automatiškai",
+    notifications: "Pranešimai",
+    notificationsDesc: "Tvarkykite pranešimų nustatymus",
+    gradeUpdates: "Pažymių atnaujinimai",
+    gradeUpdatesDesc: "Gaukite pranešimus, kai atnaujinami jūsų pažymiai",
+    aiRecs: "AI rekomendacijos",
+    aiRecsDesc: "Gaukite personalizuotus mokymosi pasiūlymus",
+    weeklyReports: "Savaitės ataskaitos",
+    weeklyReportsDesc: "Gaukite savaitines pažangos suvestines",
+    saveProfile: "Išsaugoti profilį",
+    saveCredentials: "Išsaugoti prisijungimus",
+    secure: "Saugus ryšys",
+    secureDesc: "Jūsų duomenys yra užšifruoti ir saugomi saugiai. Naudojame tik pažymių gavimui."
+  },
+  es: {
+    nav: {dashboard: "Tablero", leaderboard: "Tabla de clasificación", settings: "Configuraciones", profile: "Perfil", logout: "Cerrar sesión"},
+    profileSettings: "Configuración de perfil",
+    profileSettingsDesc: "Actualiza tu información personal y foto de perfil",
+    tamo: "Credenciales de Tamo",
+    tamoDesc: "Conecta tu cuenta de Tamo para sincronizar calificaciones automáticamente",
+    notifications: "Notificaciones",
+    notificationsDesc: "Administra tus preferencias de notificación",
+    gradeUpdates: "Actualizaciones de calificaciones",
+    gradeUpdatesDesc: "Recibe notificaciones cuando se actualicen tus calificaciones",
+    aiRecs: "Recomendaciones de IA",
+    aiRecsDesc: "Recibe sugerencias de aprendizaje personalizadas",
+    weeklyReports: "Informes semanales",
+    weeklyReportsDesc: "Obtén resúmenes semanales de progreso",
+    saveProfile: "Guardar perfil",
+    saveCredentials: "Guardar credenciales",
+    secure: "Conexión segura",
+    secureDesc: "Tus credenciales están encriptadas y almacenadas de forma segura. Solo las usamos para obtener tus calificaciones."
+  },
+  fr: {
+    nav: {dashboard: "Tableau de bord", leaderboard: "Classement", settings: "Paramètres", profile: "Profil", logout: "Se déconnecter"},
+    profileSettings: "Paramètres du profil",
+    profileSettingsDesc: "Mettez à jour vos informations personnelles et votre photo de profil",
+    tamo: "Identifiants Tamo",
+    tamoDesc: "Connectez votre compte Tamo pour synchroniser automatiquement les notes",
+    notifications: "Notifications",
+    notificationsDesc: "Gérez vos préférences de notification",
+    gradeUpdates: "Mises à jour des notes",
+    gradeUpdatesDesc: "Recevez une notification lorsque vos notes sont mises à jour",
+    aiRecs: "Recommandations IA",
+    aiRecsDesc: "Recevez des suggestions d'apprentissage personnalisées",
+    weeklyReports: "Rapports hebdomadaires",
+    weeklyReportsDesc: "Recevez des résumés hebdomadaires de vos progrès",
+    saveProfile: "Enregistrer le profil",
+    saveCredentials: "Enregistrer les identifiants",
+    secure: "Connexion sécurisée",
+    secureDesc: "Vos identifiants sont cryptés et stockés en toute sécurité. Nous les utilisons uniquement pour récupérer vos notes."
+  },
+  de: {
+    nav: {dashboard: "Armaturenbrett", leaderboard: "Rangliste", settings: "Einstellungen", profile: "Profil", logout: "Abmelden"},
+    profileSettings: "Profileinstellungen",
+    profileSettingsDesc: "Aktualisieren Sie Ihre persönlichen Daten und Ihr Profilbild",
+    tamo: "Tamo-Zugangsdaten",
+    tamoDesc: "Verbinden Sie Ihr Tamo-Konto, um Noten automatisch zu synchronisieren",
+    notifications: "Benachrichtigungen",
+    notificationsDesc: "Verwalten Sie Ihre Benachrichtigungseinstellungen",
+    gradeUpdates: "Notenaktualisierungen",
+    gradeUpdatesDesc: "Erhalten Sie eine Benachrichtigung, wenn Ihre Noten aktualisiert werden",
+    aiRecs: "KI-Empfehlungen",
+    aiRecsDesc: "Erhalten Sie personalisierte Lernvorschläge",
+    weeklyReports: "Wochenberichte",
+    weeklyReportsDesc: "Erhalten Sie wöchentliche Fortschrittszusammenfassungen",
+    saveProfile: "Profil speichern",
+    saveCredentials: "Zugangsdaten speichern",
+    secure: "Sichere Verbindung",
+    secureDesc: "Ihre Zugangsdaten werden verschlüsselt und sicher gespeichert. Wir verwenden sie nur, um Ihre Noten abzurufen."
+  },
+  ru: {
+    nav: {dashboard: "Панель", leaderboard: "Таблица лидеров", settings: "Настройки", profile: "Профиль", logout: "Выйти"},
+    profileSettings: "Настройки профиля",
+    profileSettingsDesc: "Обновите свою личную информацию и фото профиля",
+    tamo: "Данные Tamo",
+    tamoDesc: "Подключите свой аккаунт Tamo для автоматической синхронизации оценок",
+    notifications: "Уведомления",
+    notificationsDesc: "Управляйте настройками уведомлений",
+    gradeUpdates: "Обновления оценок",
+    gradeUpdatesDesc: "Получайте уведомления, когда ваши оценки обновляются",
+    aiRecs: "Рекомендации ИИ",
+    aiRecsDesc: "Получайте персонализированные предложения по обучению",
+    weeklyReports: "Еженедельные отчеты",
+    weeklyReportsDesc: "Получайте еженедельные сводки о прогрессе",
+    saveProfile: "Сохранить профиль",
+    saveCredentials: "Сохранить данные",
+    secure: "Безопасное соединение",
+    secureDesc: "Ваши данные зашифрованы и хранятся в безопасности. Мы используем их только для получения ваших оценок."
+  }
+};
+function setLanguage(lang) {
+  localStorage.setItem('lang', lang);
+  const t = translations[lang] || translations['en'];
+  document.getElementById('navDashboard').textContent = t.nav.dashboard;
+  document.getElementById('navLeaderboard').textContent = t.nav.leaderboard;
+  document.getElementById('navSettings').textContent = t.nav.settings;
+  document.getElementById('navProfile').textContent = t.nav.profile;
+  document.getElementById('navLogout').textContent = t.nav.logout;
+  document.querySelector('.flex.items-center.space-x-2.text-lg.font-semibold.mb-2 span:last-child').textContent = t.profileSettings;
+  document.querySelector('.text-gray-500.text-sm.mb-4').textContent = t.profileSettingsDesc;
+  document.querySelector('.bg-white.rounded-lg.shadow.p-6 .flex.items-center.space-x-2.text-lg.font-semibold.mb-2 span:last-child').textContent = t.tamo;
+  document.querySelectorAll('.text-gray-500.text-sm.mb-4')[1].textContent = t.tamoDesc;
+  document.querySelectorAll('.flex.items-center.space-x-2.p-4.bg-blue-50.rounded-lg .font-medium')[0].textContent = t.secure;
+  document.querySelectorAll('.flex.items-center.space-x-2.p-4.bg-blue-50.rounded-lg .text-sm.text-blue-800')[0].lastElementChild.textContent = t.secureDesc;
+  document.querySelectorAll('.bg-white.rounded-lg.shadow.p-6 .flex.items-center.space-x-2.text-lg.font-semibold.mb-2 span:last-child')[1].textContent = t.notifications;
+  document.querySelectorAll('.text-gray-500.text-sm.mb-4')[2].textContent = t.notificationsDesc;
+  document.querySelectorAll('.flex.items-center.justify-between .block.font-medium')[0].textContent = t.gradeUpdates;
+  document.querySelectorAll('.flex.items-center.justify-between .text-sm.text-gray-500')[0].textContent = t.gradeUpdatesDesc;
+  document.querySelectorAll('.flex.items-center.justify-between .block.font-medium')[1].textContent = t.aiRecs;
+  document.querySelectorAll('.flex.items-center.justify-between .text-sm.text-gray-500')[1].textContent = t.aiRecsDesc;
+  document.querySelectorAll('.flex.items-center.justify-between .block.font-medium')[2].textContent = t.weeklyReports;
+  document.querySelectorAll('.flex.items-center.justify-between .text-sm.text-gray-500')[2].textContent = t.weeklyReportsDesc;
+  document.querySelector('button.bg-blue-600.text-white.px-4.py-2.rounded').textContent = t.saveProfile;
+  document.querySelectorAll('button.bg-blue-600.text-white.px-4.py-2.rounded')[1].textContent = t.saveCredentials;
+}
+document.getElementById('languageSelector').addEventListener('change', function() {
+  setLanguage(this.value);
+});
+window.addEventListener('DOMContentLoaded', function() {
+  const lang = localStorage.getItem('lang') || 'en';
+  document.getElementById('languageSelector').value = lang;
+  setLanguage(lang);
+  document.getElementById('logoutBtn')?.addEventListener('click', function(e) {
+    e.preventDefault();
+    localStorage.removeItem('token');
+    window.location.href = 'login.html';
+  });
+  // Leaderboard link refresh if already on leaderboard
+  const leaderboardLink = document.getElementById('leaderboardLink');
+  if (window.location.pathname.endsWith('leaderboard.html') && leaderboardLink) {
+    leaderboardLink.addEventListener('click', function(e) {
+      e.preventDefault();
+      window.location.reload();
+    });
+  }
+});
+    // Profile photo preview
+    const profilePhotoInput = document.getElementById('profilePhoto');
+    const profilePhotoPreview = document.getElementById('profilePhotoPreview');
+    profilePhotoInput.addEventListener('change', function() {
+      const file = this.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function(e) {
+          profilePhotoPreview.style.backgroundImage = `url('${e.target.result}')`;
+          profilePhotoPreview.textContent = '';
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+    // Profile form submit
+    const profileForm = document.getElementById('profile-form');
+    if (profileForm) {
+      profileForm.addEventListener('submit', async function(e) {
+        e.preventDefault();
+        const formData = new FormData(profileForm);
+        const res = await fetch('settings.php', {
+          method: 'POST',
+          headers: {
+            'Authorization': 'Bearer ' + (localStorage.getItem('token') || '')
+          },
+          body: formData
+        });
+        const data = await res.json();
+        // handle response (show success/error)
+      });
+    }
+    // Tamo credentials form submit
+    const tamoForm = document.querySelector('form[action="#tamo"]') || document.querySelectorAll('form')[1];
+if (tamoForm) {
+  tamoForm.addEventListener('submit', async function(e) {
+    e.preventDefault();
+    const tamo_username = document.getElementById('tamoUsername').value;
+    const tamo_password = document.getElementById('tamoPassword').value;
+    const res = await fetch('settings.php', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+        'Authorization': 'Bearer ' + (localStorage.getItem('token') || '')
+      },
+      body: JSON.stringify({ tamo_username, tamo_password })
+    });
+    const data = await res.json();
+    // handle response (show success/error)
+  });
+}
+  </script>
 </body>
 </html>
